Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,6 +1,6 @@
 #labels Featured
 ----
-= Rutorrent Webui =
+=Project has moved to [https://github.com/Novik/ruTorrent Github]=
 ----
   * [Main Description]
     * [Versions]
